--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,2 @@
 @import "./node_modules/sass-rem/_rem";
-@import "./node_modules/css-reset-and-normalize/scss/reset-and-normalize";
-@import "_default";
+@import "../components/header/header";
